# news_agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: TW_stock_list.csv  confidence_score_detail.json  entity_match_result.json
news agent/data/: confidence_score_detail.json  keyword_filter_set_zh.csv  output.json  sentiment_result.json
news agent/scripts/: PTT_scraper.py  deduplication.py  main.py  sentiment_analysis.py
parsing/: PTT_scraper.py  deduplication.py  html_scraper.py  sentiment_analysis.py
scripts/: PTT_scraper.py  deduplication.py  main.py  sentiment_analysis.py
